corrected duplicated class (renamed to .tags) + align-items: center for .details

--- a/src/app/video-detail/video-detail.component.scss
+++ b/src/app/video-detail/video-detail.component.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
 
-    .details {
+    .tags {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -61,8 +61,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      align-content: center;
-      margin-top: 25px;
+      align-items: center;
       padding: 20px 0;
 
       .video-channel {
